src/test/data/tests/const/invalid/assign_to_const_variable_2.c
int main(void) {
    const int a = 0;
    a += 20;
    return 0;
}
